<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.ValoracionTituloActivity">

    <!-- ScrollView para hacer todo el contenido desplazable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!-- Contenedor principal dentro del ScrollView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Botón de retroceso -->
            <ImageButton
                android:id="@+id/imageButtonEnrere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-150dp"
                android:layout_marginTop="35dp"
                android:background="@android:color/transparent"
                android:contentDescription="Botón para ir atrás"
                android:src="@android:drawable/ic_menu_revert"
                app:tint="@color/md_theme_primaryContainer" />

            <!-- Imagen principal del contenido -->
            <ImageView
                android:id="@+id/imageContent"
                android:layout_width="300dp"
                android:layout_height="350dp"
                android:contentDescription="Imagen del contenido" />

            <!-- Contenedor horizontal para el título y las imágenes de las plataformas -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <!-- Título del contenido -->
                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/md_theme_primaryContainer"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!-- Iconos de las plataformas -->
                <ImageView
                    android:id="@+id/platformIcon1"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/circular_background"
                    android:contentDescription="Plataforma 1"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/platformIcon2"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/circular_background"
                    android:contentDescription="Plataforma 2"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/platformIcon3"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/circular_background"
                    android:contentDescription="Plataforma 3"
                    android:scaleType="centerCrop" />
            </LinearLayout>

            <!-- Descripción del contenido -->
            <TextView
                android:id="@+id/textDescription"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/md_theme_primaryContainer"
                android:textSize="11sp" />

            <!-- RatingBar para puntuación -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/añadirTittulo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/add_circle" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:isIndicator="false"
                    android:numStars="4"
                    android:stepSize="0.5"
                    android:theme="@style/Widget.AppCompat.RatingBar.Small" />

                <TextView
                    android:id="@+id/ratingErrorText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Error de puntuación"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageContentComment"
                    app:layout_constraintTop_toBottomOf="@id/ratingBarComment" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <!-- Imagen principal del contenido -->
                <ImageView
                    android:id="@+id/imageContentComment"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="icono perfil"
                    android:scaleType="centerCrop"
                    android:src="@drawable/account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/md_theme_primary"
                    tools:src="@drawable/account" />

                <!-- Cuadro de texto para escribir comentarios -->
                <EditText
                    android:id="@+id/editTextComment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="Escribe un comentario"
                    app:layout_constraintBottom_toTopOf="@id/textDescriptionComment"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageContentComment"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Descripción del contenido -->
                <TextView
                    android:id="@+id/textDescriptionComment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageContentComment"
                    app:layout_constraintTop_toBottomOf="@id/editTextComment"
                    tools:text="Descripción de ejemplo" />

                <!-- RatingBar para puntuación -->
                <RatingBar
                    android:id="@+id/ratingBarComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:isIndicator="false"
                    android:numStars="4"
                    android:stepSize="0.5"
                    android:theme="@style/Widget.AppCompat.RatingBar.Small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageContentComment"
                    app:layout_constraintTop_toBottomOf="@id/textDescriptionComment"
                    tools:rating="0.0" />

                <ImageButton
                    android:id="@+id/buttonSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="Enviar"
                    android:src="@drawable/add_circle"
                    app:layout_constraintBottom_toBottomOf="@id/ratingBarComment"
                    app:layout_constraintStart_toEndOf="@id/imageContentComment"
                    app:layout_constraintTop_toBottomOf="@id/textDescriptionComment" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- RecyclerView para comentarios dinámicos -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                tools:listitem="@layout/item_valoracion_titulo" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
